<resources>
    <string name="back">Back</string>
    <string name="back_button_description">Back</string>
    <string name="continue_button">Continue</string>
    <string name="app_name">Smishing Detection</string>
    <string name="bot_profile_icon">Bot Profile Icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_saved_articles">No saved articles yet.</string>
    <string name="baseline_keyboard_arrow_right_24">Right Arrow</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="action_welcome_to_screen">Welcome Back</string>
    <string name="action_login_in">Login</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be &gt;5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_description">App Logo</string>
    <string name="chat_history">Chat History</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="history">View chat history</string>
    <string name="chat_assistant_btn">Get Support</string>
    <string name="chat_assistant_page">Support Chat</string>
    <string name="back_button_desc">Back</string>
    <string name="send_button_desc">Send</string>
    <string name="support_hint">Type your message...</string>
    <string name="support_title">AI Support</string>
    <string name="chat_back_desc">Back</string>
    <string name="send_message">Send message</string>
    <string name="chat_input_hint">Type your message...</string>
    <string name="cd_back">Back</string>
    <string name="cd_send">Send message</string>
    <string name="cd_logo">App logo</string>
    <string name="cd_history">Open chat history</string>
    <string name="cd_send_button">Send message button</string>
    <string name="cd_message_input">Editable text field to type your message</string>
    <string name="chat_welcome_1">Hi! I’m the Smishing Smart Assistant.</string>
    <string name="chat_welcome_2">I can help explain smishing, check suspicious texts, or show how to report them.</string>
    <string name="chat_welcome_3">Try: "What is smishing?" or paste a message you want me to check.</string>
    <string name="export_chat_history">Export chat history</string>
    <string name="chat_history_exported">Chat history exported successfully.</string>
    <string name="cd_menu">More options</string>
    <string name="export_chat_history_txt">Export chat history (TXT)</string>
    <string name="export_chat_history_pdf">Export chat history (PDF)</string>
    <string name="smishing_assistant">Smishing Assistant</string>
    <string name="support_feedback_title">Support Feedback</string>
    <string name="feedback_header">Smishing Assistant</string>
    <string name="select_rating">Select rating</string>
    <string name="feedback_q1">Has your issue been solved?</string>
    <string name="feedback_yes">Yes 🙂</string>
    <string name="feedback_no">No 🙁</string>
    <string name="feedback_select_yes_no">Please select Yes or No.</string>
    <string name="feedback_q2">How would you rate our support service?</string>
    <string name="feedback_apology">We apologize for any inconvenience. We will work harder to improve our services!</string>
    <string name="no_specific_issue">No specific issue selected</string>
    <string name="experience_problems">Did you experience any of the following problems?</string>
    <string name="problem_solution_not_helpful">Solution not helpful</string>
    <string name="problem_robotic_replies">Robotic replies</string>
    <string name="problem_slow_response">Slow response</string>
    <string name="problem_wrong_words">Wrong words used</string>
    <string name="problem_repetitive">Getting repetitive questions</string>
    <string name="problem_unfriendly">Unfriendly attitude</string>
    <string name="feedback_hint">Please tell us more...</string>
    <string name="feedback_more">Please provide more details</string>
    <string name="feedback_counter">0/280</string>
    <string name="feedback_submit">Submit</string>
    <string name="thank_you_message">Thank you for your valuable feedback!</string>
    <string name="close">Close</string>
    <string name="feedback_submitted">Your feedback has been submitted.</string>
    <string name="smishing_ai_assistant">Smishing AI Assistant</string>
    <string name="support_feedback_details_title">Feedback Details</string>
    <string name="chat_rated_success">Chat rated successfully</string>
    <string name="feedback_positive_msg">Thank you for your feedback! Your support motivates us to keep improving.</string>
    <string name="feedback_neutral_msg">Thanks for sharing your feedback. We’ll continue working to provide a better experience.</string>
    <string name="feedback_negative_msg">We apologize for any inconvenience. We will work harder to improve our services!</string>
    <string name="cd_success">Feedback submitted successfully</string>
    <string name="feedback_thank_you">Thank you for your feedback! Your support is what motivates us to keep improving.</string>
    <string name="feedback_summary_default">Excellent</string>
    <string name="rating_poor">Poor 😞</string>
    <string name="rating_fair">Fair 😐</string>
    <string name="rating_average">Average 🙂</string>
    <string name="no_network_message">No available network. Please check your internet connection or try again later</string>
    <string name="login_page">Login</string>
    <string name="detections_str">Detections</string>
    <string name="menu_news">News</string>
    <string name="play_alert_text">Play Alert Text</string>
    <string name="menu_Cyber_news">ACCC Scamwatch News</string>
    <string name="menu_settings">Settings</string>
    <string name="account_page">Account</string>
    <string name="report_page">Report Smishing</string>
    <string name="filtering_page">Smishing Rules</string>
    <string name="debug">Debug</string>
    <string name="help_page">Help</string>
    <string name="sms_page">SMS Messages</string>
    <string name="detectionsBtn">View Detections</string>
    <string name="new_detectionsTxt">New detections</string>
    <string name="total_detectionsTxt">Total detections</string>
    <string name="view_detections">View Detections</string>
    <string name="risk_scanner">Risk Scanner</string>
    <string name="password_changeBtn">Change Password</string>
    <string name="phone_changeBtn">Change Phone</string>
    <string name="email_changeBtn">Change Email</string>
    <string name="dark_modeBtn">Toggle Dark mode</string>
    <string name="delete_accountBtn">Delete account</string>
    <string name="sign_outBtn">Sign out</string>
    <string name="session_timeoutBtn">Session Timeout Settings</string>
    <string name="pin_changeBtn">Change Pin</string>
    <string name="terms_and_conditions">
&lt;b&gt;1.&lt;/b&gt; By using this app, you agree to comply with these terms.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; The app is provided on an as is basis, with no guarantees of accuracy or availability.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; You are responsible for ensuring you use the services in accordance with applicable laws.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; Unauthorized reproduction, modification, or distribution of this app or its content is strictly prohibited.&lt;br/&gt;
&lt;b&gt;5.&lt;/b&gt; We reserve the right to modify or discontinue the app without notice.&lt;br/&gt;
&lt;b&gt;6.&lt;/b&gt; We respect your privacy and commit to protecting your data as per the privacy policy outlined herein.&lt;br/&gt;
&lt;b&gt;7.&lt;/b&gt; Your personal data will only be used for purposes that you have explicitly agreed to.&lt;br/&gt;
&lt;b&gt;8.&lt;/b&gt; Any disputes arising from the use of this app will be subject to the jurisdiction of [Your Location].&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;PRIVACY POLICY&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;1.&lt;/b&gt; We collect data to enhance your experience and improve our services.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; Your data will never be sold or shared with third parties without your consent, except as required by law.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; Cookies may be used to personalize content and ads.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; By continuing to use the app, you consent to our use of cookies.&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;DISCLAIMER&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;

&lt;b&gt;1.&lt;/b&gt; This app is provided as-is without any warranties of any kind.&lt;br/&gt;
&lt;b&gt;2.&lt;/b&gt; We do not guarantee uninterrupted or error-free use of the app.&lt;br/&gt;
&lt;b&gt;3.&lt;/b&gt; We are not liable for any damages resulting from the use of this app.&lt;br/&gt;
&lt;b&gt;4.&lt;/b&gt; Always use caution when interacting with unknown parties through the app.&lt;br/&gt;&lt;br/&gt;
    </string>
    <string name="change_password_page">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="change_email_page">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm Email</string>
    <string name="sign_out_page">Sign Out</string>
    <string name="confirmSOTxt">Are you sure you want to sign out?</string>
    <string name="cancelSOBtn">Cancel</string>
    <string name="delete_acc_page">Delete Account</string>
    <string name="confirmDelTxt">Are you sure?</string>
    <string name="confirmPNBtn">Change Phone Number</string>
    <string name="confirmPN">Enter your phone number:</string>
    <string name="phone_number_page">Change Phone Number</string>
    <string name="confirm_PNTxt">New number must be associated with this phone.</string>
    <string name="cancelDelBtn">Cancel</string>
    <string name="confirmDelBtn">Yes</string>
    <string name="confirmPW">Enter your password:</string>
    <string name="phone_number">Phone Number</string>
    <string name="report_message_prompt">Smishing message</string>
    <string name="action_report">Send report</string>
    <string name="account_btn">Account</string>
    <string name="notifications_btn">Notifications</string>
    <string name="filtering_btn">Filtering</string>
    <string name="report_btn">Report</string>
    <string name="help_btn">Help</string>
    <string name="about_btn">Privacy Policy</string>
    <string name="keywords_label">Keywords</string>
    <string name="pn_label">Phone numbers</string>
    <string name="set_keyword_btn">Set keywords</string>
    <string name="set_pn_btn">Set numbers</string>
    <string name="name_label">Full Name</string>
    <string name="pin_label">Pin</string>
    <string name="email_label">Email</string>
    <string name="Pin_label">Pin</string>
    <string name="pn_register_label">Phone Number</string>
    <string name="pw_register_label">Password</string>
    <string name="back_button">Back</string>
    <string name="profile_picture_desc">Profile Picture</string>
</resources>